# ask-b-data

./: .gitignore  README.md  pyproject.toml  requirements.txt
ask-bc-rust/: Cargo.toml
ask-bc-rust/src/: main.rs
avalanche/: pyproject.toml  requirements.txt
avalanche/avalanche/data/collection/: air_temp_daily.py  air_temperature.py  bouy_data.py  caic_avy_forecast.py  snow_depth.py  snow_depth_daily.py  snow_depth_v2.py  snow_water_equivalent.py  streamflows.py  swe_daily.py
avalanche/tests/: test_avalanche.py
docker/snow/: main.py
snow/: snotel.py
snow/cloud_functions/: main.py  snotel_daily.py  text.txt
