[package]
name = "ask-bc-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
polars = { version = "0.35.2", features = ["lazy"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
scraper = "0.18.1"
serde = { version = "1.0.192", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
